# research-tool-agent

./: README.md  pyproject.toml
src/research-tool-agent/: config.py  main.py
src/research-tool-agent/clients/: __init__.py  llm_hf_adapter.py  llm_port.py
src/research-tool-agent/tools/: __init__.py  web_search.py
src/research_tool_agent/: config.py
src/research_tool_agent/cli/: __init__.py
src/research_tool_agent/cli/commands/: __init__.py  chat.py
src/research_tool_agent/clients/: llm_hf_adapter.py
src/research_tool_agent/middleware/: __init__.py  tool_error_handler.py
src/research_tool_agent/prompts/: __init__.py  system.py
src/research_tool_agent/schemas/: __init__.py  context.py  responses.py
src/research_tool_agent/tools/: __init__.py  calculator.py  file_reader.py
