[project]
name = "research-tool-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.8",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]
