[project]
name = "research-tool-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.8",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[project.scripts]
research-agent = "research_tool_agent.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_tool_agent"] 
